fixing code lines spacing

--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 .App {
-  font-family: 'Roboto', sans-serif;
+  font-family: "Roboto", sans-serif;
   text-align: center;
   margin: 0 auto;
 }
@@ -11,22 +11,19 @@ header {
   margin-top: 50px;
 }
 
-
 footer {
   font-size: 12px;
   color: black;
   text-align: center;
-  background: #51A525;
+  background: #51a525;
   padding-bottom: 5px;
   padding-top: 5px;
 }
- 
-
 
 footer a {
   color: black;
 }
 
 footer a:hover {
- color: yellow;
+  color: yellow;
 }
